# plx

./: CMakeLists.txt
script/: backup  c  rebuild  setup.sh  t
src/: main.cpp
src/lib/sqlite/: c  dlltest.cpp  sqlite.cpp
src/lib/sqlite/sqlite-amalgamation-3390400/: c
src/src/: address.h  any.cpp  any.h  apply.cpp  apply.h  array.cpp  array.h  boolean.h  continuation.cpp  continuation.h  evaluator.cpp  evaluator.h  exceptionhandler.h  function.cpp  function.h  identifier.cpp  identifier.h  integer.cpp  integer.h  list.cpp  list.h  memory.cpp  memory.h  nil.cpp  nil.h  parser.cpp  parser.h  parser2.cpp  parser2.h  prim_dl.cpp  primitive.cpp  primitive.h  primitives.cpp  primitives.h  queue.cpp  queue.h  real.cpp  real.h  repl.cpp  repl.h  (+8 more)
test/: list_test.cpp  parser_test.cpp  queue_test.cpp
